amended cart and checkout page.

--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,78 +1,77 @@
 {% extends 'store/main.html' %} {% load static %} {% block content %}
-<link rel="stylesheet" href="{% static 'store/css/main.css' %}" />
-<body>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="box-element">
-        <a class="btn btn-outline-dark" href="{% url 'store:store' %}"
-          >&#x2190; Continue Shopping</a
-        >
-
-        <br />
-        <br />
-        <table class="table">
-          <tr>
-            <th>
-              <h5>Items: <strong>{{order.get_cart_items}}</strong></h5>
-            </th>
-            <th>
-              <h6>
-                Total:<strong>
-                  Ksh.{{order.get_cart_total|floatformat:2}}</strong
-                >
-              </h6>
-            </th>
-            <th>
-              <a
-                style="float: right; margin: 5px"
-                class="btn btn-success"
-                href="{% url 'store:checkout' %}"
-                >Checkout</a
-              >
-            </th>
-          </tr>
-        </table>
-      </div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="box-element">
+      <a class="btn btn-outline-dark" href="{% url 'store:store' %}"
+        >&#x2190; Continue Shopping</a
+      >
 
       <br />
-      <div class="box-element">
-        <div class="cart-row">
-          <div style="flex: 2"></div>
-          <div style="flex: 2"><strong>Item</strong></div>
-          <div style="flex: 1"><strong>Price</strong></div>
-          <div style="flex: 1"><strong>Quantity</strong></div>
-          <div style="flex: 1"><strong>Total</strong></div>
-        </div>
+      <br />
+      <table class="table">
+        <tr>
+          <th>
+            <h6>Items: <strong>{{order.get_cart_items}}</strong></h6>
+          </th>
+          <th>
+            <small>
+              Total:<strong> Ksh.{{order.get_cart_total|floatformat:2}}</strong>
+            </small>
+          </th>
+          <th>
+            <a
+              style="float: right; margin: 3px"
+              class="btn btn-success"
+              href="{% url 'store:checkout' %}"
+              >Checkout</a
+            >
+          </th>
+        </tr>
+      </table>
+    </div>
 
-        {%for item in items %}
-        <div class="cart-row">
-          <div style="flex: 2">
-            <img class="row-image" src="{{item.product.imageURL}}" />
-          </div>
-          <div style="flex: 2">{{item.product.name}}</div>
-          <div style="flex: 1">Ksh.{{item.product.price}}</div>
-          <div style="flex: 1">
-            <h6 class="quantity">{{item.quantity}}</h6>
-            <div class="quantity">
-              <img
-                data-product="{{item.product.id}}"
-                data-action="add"
-                class="chg-quantity update-cart"
-                src="{% static 'store/img/logo/arrow-up.png' %}"
-              />
-              <img
-                data-product="{{item.product.id}}"
-                data-action="remove"
-                class="chg-quantity update-cart"
-                src="{% static 'store/img/logo/arrow-down.png' %}"
-              />
-            </div>
-          </div>
-          <div style="flex: 1">Ksh.{{item.get_total}}</div>
-        </div>
-        {% endfor %}
+    <br />
+    <div class="box-element">
+      <div class="cart-row">
+        <div style="flex: 2"></div>
+        <div style="flex: 2"><strong>Item</strong></div>
+        <div style="flex: 1"><strong>Price</strong></div>
+        <div style="flex: 1"><strong>Quantity</strong></div>
+        <div style="flex: 1"><strong>Total</strong></div>
       </div>
+      {% for item in items %}
+      <div class="cart-row">
+        <div style="flex: 2">
+          <img class="row-image" src="{{item.product.imageURL}}" />
+        </div>
+        <div style="flex: 2"><small>{{item.product.name}}</small></div>
+        <div style="flex: 1">
+          <small>Ksh.{{item.product.price|floatformat:1}}</small>
+        </div>
+        <div style="flex: 1">
+          <small class="quantity">{{item.quantity}}</small>
+          <div class="quantity">
+            <img
+              data-product="{{item.product.id}}"
+              data-action="add"
+              class="chg-quantity update-cart"
+              src="{% static  'images/arrow-up.png' %}"
+            />
+
+            <img
+              data-product="{{item.product.id}}"
+              data-action="remove"
+              class="chg-quantity update-cart"
+              src="{% static  'images/arrow-down.png' %}"
+            />
+          </div>
+        </div>
+        <div style="flex: 1">
+          <small>Ksh.{{item.get_total|floatformat:1}}</small>
+        </div>
+      </div>
+      {% endfor %}
     </div>
   </div>
-</body>
-{%endblock content%}
+</div>
+{% endblock content %}
