--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,18 +1,24 @@
 {% extends 'store/main.html' %} {% load static %} {% block content %}
-<br />
 <div class="row">
   {% for product in products %}
   <div class="col-lg-4">
     <img class="thumbnail" src="{{product.imageURL}}" />
     <div class="box-element product">
-      <h5><strong>{{product.name}}</strong></h5>
+      <h6><strong>{{product.name}}</strong></h6>
       <hr />
 
-      <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+      <button
+        data-product="{{product.id}}"
+        data-action="add"
+        class="btn btn-outline-secondary add-btn update-cart"
+      >
+        Add to Cart
+      </button>
+
       <a class="btn btn-outline-success" href="#">View</a>
-      <h4 style="display: inline-block; float:right">
-        <strong>Ksh.{{product.price|floatformat:2}}</strong>
-      </h4>
+      <h6 style="display: inline-block; float: right">
+        <strong>Ksh.{{product.price}}</strong>
+      </h6>
     </div>
   </div>
   {% endfor %}
