--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,154 +1,209 @@
 {% extends 'store/main.html' %} {% load static %} {% block content %}
-<link rel="stylesheet" href="{% static 'store/css/main.css' %}" />
-<br />
 <div class="row">
   <div class="col-lg-6">
     <div class="box-element" id="form-wrapper">
       <form id="form">
         <div id="user-info">
           <div class="form-field">
-            <input required class="form-control" type="text" name="name" placeholder="Full Name.." />
+            <input
+              required
+              class="form-control"
+              type="text"
+              name="name"
+              placeholder="Name.."
+            />
           </div>
           <div class="form-field">
-            <input required class="form-control" type="number" name="phone" placeholder="Phone Number.." />
+            <input
+              required
+              class="form-control"
+              type="number"
+              name="phone"
+              placeholder="Phone Number.."
+            />
           </div>
         </div>
 
         <div id="shipping-info">
           <hr />
-          <p>Shipping Information:</p>
+          <h4>Shipping Information:</h4>
           <hr />
           <div class="form-field">
-            <input class="form-control" type="text" name="address" placeholder="Address.." />
+            <input
+              class="form-control"
+              type="text"
+              name="address"
+              placeholder="Address.."
+            />
           </div>
           <div class="form-field">
-            <input class="form-control" type="text" name="town" placeholder="Town.." />
-          </div>
-          <div class="form-field">
-            <input class="form-control" type="text" name="location" placeholder="Location(eg.Kongoni).." />
+            <input
+              class="form-control"
+              type="text"
+              name="town"
+              placeholder="Town.."
+            />
           </div>
         </div>
 
         <hr />
-        <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue" />
+        <input
+          id="form-button"
+          class="btn btn-success btn-block"
+          type="submit"
+          value="Continue"
+        />
       </form>
     </div>
+
     <br />
-
-    
     <div class="box-element hidden" id="payment-info">
-      <small style="color: green;">M-Pesa Option</small>
-      <button id="make-payment">Make-Payment</button>
+      <h4 style="color:green;">M-Pesa Options</h4>
+      <!--<button id="make-payment">Make payment</button>-->
+      <div id="paypal-button-container"></div>
     </div>
-
   </div>
 
   <div class="col-lg-6">
     <div class="box-element">
-      <a class="btn btn-outline-dark" href="{% url 'store:cart' %}">&#x2190; Back to Cart</a>
+      <a class="btn btn-outline-dark" href="{% url 'store:cart' %}"
+        >&#x2190; Back to Cart</a
+      >
       <hr />
-      <h3>Order Summary</h3>
+      </h4>Order Summary</>
       <hr />
       {% for item in items %}
-      <div class="cart-row"> 
+      <div class="cart-row">
         <div style="flex: 2">
-          <img class="row-image" src="{{ item.product.imageURL}}" />
+          <img class="row-image" src="{{item.product.imageURL}}" />
         </div>
-        <div style="flex: 2">
-          <p>{{item.product.name}}</p>
-        </div>
+        <div style="flex: 2"><p>{{item.product.name}}</p></div>
         <div style="flex: 1">
           <p>Ksh.{{item.product.price|floatformat:2}}</p>
         </div>
-        <div style="flex: 1">
-          <p>x{{item.quantity}}</p>
-        </div>
+        <div style="flex: 1"><p>x{{item.quantity}}</p></div>
       </div>
-      {%endfor%}
+      {% endfor %}
       <h5>Items: {{order.get_cart_items}}</h5>
-      <h5>Total: ksh.{{order.get_cart_total|floatformat:2}}</h5>
+      <h5>Total: Ksh.{{order.get_cart_total|floatformat:2}}</h5>
     </div>
   </div>
 </div>
-<br />
+
+<script src="https://www.paypal.com/sdk/js?client-id=YOUR-CLIENT-ID&currency=USD&disable-funding=credit"></script>
+
+<script>
+  var total = "{{order.get_cart_total}}";
+  // Render the PayPal button into #paypal-button-container
+  paypal
+    .Buttons({
+      style: {
+        color: "blue",
+        shape: "rect",
+      },
+
+      // Set up the transaction
+      createOrder: function (data, actions) {
+        return actions.order.create({
+          purchase_units: [
+            {
+              amount: {
+                value: parseFloat(total).toFixed(2),
+              },
+            },
+          ],
+        });
+      },
+
+      // Finalize the transaction
+      onApprove: function (data, actions) {
+        return actions.order.capture().then(function (details) {
+          // Show a success message to the buyer
+          submitFormData();
+        });
+      },
+    })
+    .render("#paypal-button-container");
+</script>
+
 <script type="text/javascript">
   var shipping = "{{order.shipping}}";
-  var total = "{{order.get_cart_total}}";
 
-  if (shipping == 'False') {
-    document.getElementById('shipping-info').innerHTML = ''
-  }
-  
-  if (user != 'AnonymousUser'){
-    document.getElementById('user-info').innerHTML = ''
+  if (shipping == "False") {
+    document.getElementById("shipping-info").innerHTML = "";
   }
 
-  if (shipping == 'False' && user != 'AnonymousUser'){
+  if (user != "AnonymousUser") {
+    document.getElementById("user-info").innerHTML = "";
+  }
+
+  if (shipping == "False" && user != "AnonymousUser") {
     //Hide entire form if user is logged in and shipping is false
-    document.getElementById('form-wrapper').classList.add("hidden");
-    //show payment if logged in user wan to buy an item that does not require shipping
-    document.getElementById('payment-info').classList.remove("hidden");
+    document.getElementById("form-wrapper").classList.add("hidden");
+    //Show payment if logged in user wants to buy an item that does not require shipping
+    document.getElementById("payment-info").classList.remove("hidden");
   }
 
+  var form = document.getElementById("form");
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+    console.log("Form Submitted...");
+    document.getElementById("form-button").classList.add("hidden");
+    document.getElementById("payment-info").classList.remove("hidden");
+  });
 
-  var form = document.getElementById('form');
+  /*
+	    document.getElementById('make-payment').addEventListener('click', function(e){
+	    	submitFormData()
+	    })
+	    */
 
-  csrftoken = form.getElementsByTagName("input")[0].value
-  console.log('Newtoken:', form.getElementsByTagName("input")[0].value)
+  function submitFormData() {
+    console.log("Payment button clicked");
 
-  form.addEventListener('submit', function(e){
-    e.preventDefault()
-    console.log('Form submitted...')
-    document.getElementById('form-button').classList.add("hidden")
-    document.getElementById('payment-info').classList.remove("hidden")})
-
-  document.getElementById('make-payment').addEventListener('click',function(e){
-    submitFormData()
-  })
-
-  function submitFormData(){
-    console.log("Payment button clicked")
-    let userFormData = {
-      'name':null,
-      'phone':null,
-      'total': total,
+    var userFormData = {
+      name: null,
+      phone: null,
+      total: total,
     };
 
-    let shippingInfo = {
-      'address':null,
-      'town':null,
-      'location':null,
+    var shippingInfo = {
+      address: null,
+      town: null,
     };
 
-    if(shipping != 'False'){
-      shippingInfo.address = form.address.value
-      shippingInfo.town = form.town.value
-      shippingInfo.location = form.location.value
+    if (shipping != "False") {
+      shippingInfo.address = form.address.value;
+      shippingInfo.town = form.town.value;
     }
 
-    if(user == 'AnonymousUser'){
-      userFormData.name = form.name.value
-      userFormData.phone = form.phone.value
+    if (user == "AnonymousUser") {
+      userFormData.name = form.name.value;
+      userFormData.phone = form.phone.value;
     }
-    let url = '/process_order/';
-    fetch(url,{
-      method:"POST",
-      headers:{
-        'Content-Type':"application/json",
-        'X-CSRFToken': csrftoken,
+
+    console.log("Shipping Info:", shippingInfo);
+    console.log("User Info:", userFormData);
+
+    var url = "/process_order/";
+    fetch(url, {
+      method: "POST",
+      headers: {
+        "Content-Type": "applicaiton/json",
+        "X-CSRFToken": csrftoken,
       },
-      body:JSON.stringify({'form': userFormData, 'shipping':shippingInfo})
+      body: JSON.stringify({ form: userFormData, shipping: shippingInfo }),
     })
-    .then((response) => response.json())
-    .then((data) => {
-      console.log('Success:', data);
-      alert('Transaction completed');
-      
-      cart = {}
-      document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/"
-      
-      window.location.href = "{% url 'store:store' %}"
-    })
+      .then((response) => response.json())
+      .then((data) => {
+        console.log("Success:", data);
+        alert("Transaction completed");
+
+        cart = {};
+        document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/";
+
+        window.location.href = "{% url 'store:store' %}";
+      });
   }
 </script>
 {% endblock content %}
