--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,4 +1,6 @@
 {% extends 'store/main.html' %} {% load static %} {% block content %}
-<h1 style="color: white;" >home store page</h1>
 
-{%endblock content %}
+<body style="background-color: white">
+  <h1>HOME PAGE</h1>
+</body>
+{% endblock content %}
