--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -1,137 +1,146 @@
-{% load static %}
 <!DOCTYPE html>
-<html lang="en">
-  <head>    
-    <meta charset="utf-8" />
+{% load static %}
+<html>
+  <head>
+    <title>Nvsstationers</title>
+
     <meta
-      name="viewport"content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <!-- Bootstrap CSS navbar -->      
-    <title>Nvs Stationers</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- Load an icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<!-- Load staticfiles -->
-    <link rel="stylesheet" href="{% static 'store/css/main.css' %}">
-    <link rel="icon" href="{% static 'store/img/logo/logo.png' %}" type="image/icon type" >
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
+    />
+   
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
+
     <script type="text/javascript">
-      let user = "{{ request.user }}";
-    
+      var user = "{{request.user}}";
+
       function getToken(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            const cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i].trim();
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== "") {
+          var cookies = document.cookie.split(";");
+          for (var i = 0; i < cookies.length; i++) {
+            var cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === name + "=") {
+              cookieValue = decodeURIComponent(
+                cookie.substring(name.length + 1)
+              );
+              break;
             }
+          }
         }
         return cookieValue;
-    }
-    const csrftoken = getToken('csrftoken');
-
-    function getCookie(name){
-      // Loop through the array elements
-      for(var i = 0; i < cookieArr.length; i++){
-        let cookiePair = cookieArr[i].split('=');
-        /* Removing whitespace at the beginning of the cokkie name and compare it with the given string*/
-        if(name == cookiePair[0].trim()){
-          // Decode the cookie value and return
-          return decodeURIComponent(cookiePair[1]);
-        }
       }
-      // return null if not found
-      return null;
-    }
-let cart = JSON.parse(getCookie('cart'))
-if (cart == undefined){
-  cart = {}
-  console.log('Cart was created!')
-  document.cookie= 'cart='+ JSON.stringify(cart) + ";domain=;path=/"
-}
-console.log('Cart:', cart)
+      var csrftoken = getToken("csrftoken");
+
+      function getCookie(name) {
+        // Split cookie string and get all individual name=value pairs in an array
+        var cookieArr = document.cookie.split(";");
+
+        // Loop through the array elements
+        for (var i = 0; i < cookieArr.length; i++) {
+          var cookiePair = cookieArr[i].split("=");
+
+          /* Removing whitespace at the beginning of the cookie name
+		        and compare it with the given string */
+          if (name == cookiePair[0].trim()) {
+            // Decode the cookie value and return
+            return decodeURIComponent(cookiePair[1]);
+          }
+        }
+
+        // Return null if not found
+        return null;
+      }
+      var cart = JSON.parse(getCookie("cart"));
+
+      if (cart == undefined) {
+        cart = {};
+        console.log("Cart Created!", cart);
+        document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/";
+      }
+      console.log("Cart:", cart);
     </script>
     
   </head>
   <body>
-    <div class="waviy">
-      <span style="--i:1">N</span>
-      <span style="--i:2">V</span>
-      <span style="--i:3">S</span>
-      <span style="--i:4">S</span>
-      <span style="--i:5">T</span>
-      <span style="--i:6">A</span>
-      <span style="--i:7">T</span>
-      <span style="--i:8">I</span>
-      <span style="--i:9">O</span>
-      <span style="--i:10">N</span>
-      <span style="--i:11">E</span>
-      <span style="--i:12">R</span>
-      <span style="--i:13">S</span>
-    </div>    
-  <!--navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="{% url 'store:home' %}"
+        ><img
+          src="{% static 'images/logo.jpg' %}"
+          alt="Stationers logo"
+          height="50px"
+          width="50px"
+          style="border-radius: 50%"
+      /></a>
 
-
-	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="{% url 'store:home' %}"><img src="{% static 'store/img/logo/logo.jpg' %}"
-      alt="Stationers logo" height="50px" width="50px"
-       style="
-       border-radius: 50%;
-       "></a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
 	        <a class="nav-link" href="{% url 'store:store' %}">Shop <i class="fa fa-shopping-cart"aria-hidden="true"></i></a><span class="sr-only">(current)</span></a>
 	      </li>
 	 
 	    </ul>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </li>
-      </ul>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Help <span class="sr-only">(current)</span></a
+            >
+          </li>
+        </ul>
+        <div class="form-inline my-2 my-lg-0">
+          <a href="{% url 'users:login' %}" class="btn btn-warning">Login</a>
 
-	    <div class="form-inline my-2 my-lg-0">
-	     	<a href="{% url 'users:login' %}"class="btn btn-warning">Login</a>
-	     	
-	     	<a href="{% url 'store:cart' %}">
-	    		<img  id="cart-icon" src="{% static 'store/img/logo/cart.png' %}">
-	    	</a>
-	    	<p id="cart-total">{{cartItems}}</p>
+          <a href="{% url 'store:cart' %}">
+            <img id="cart-icon" src="{% static 'images/cart.png' %}" />
+          </a>
+          <p id="cart-total">{{cartItems}}</p>
+        </div>
+      </div>
+    </nav>
 
-	    </div>
-	  </div>
-	</nav>
+    <div class="container">
+      <br />
+      {% block content %} {% endblock content %}
+    </div>
 
-<main class="container">
-  {% block content %}
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
 
-  {% endblock %}
-</main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
 
-<!-- Optional JavaScript; choose one of the two! -->
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    --><script type="text/javascript" src="{% static 'store/js/main.js' %}"> </script>
-<script type="text/javascript" src="{% static 'store/js/cart.js' %}"> </script>
-
+    <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+  </body>
 </html>
